...
import 'package:flutter/material.dart';
import 'package:google_fonts/google_fonts.dart';

class BookDetailWidget extends StatelessWidget {
  final BookModel? book;

  const BookDetailWidget({super.key, this.book});

  @override
  Widget build(BuildContext context) {
    if (book == null) {
      return Column(key: Key("noBooksFound"), mainAxisAlignment: MainAxisAlignment.center, children: [
        Image.asset("assets/bookshelf.png", height: 450, width: 450),
...
