...
              height: 56,
              width: double.infinity,
              alignment: Alignment.center,
              //margin: const EdgeInsets.only(left: 10),
              padding: const EdgeInsets.symmetric(horizontal: 10.0, vertical: 2),
              child: TextFormField(
                key: const Key('inputText'),
                scrollPhysics: const BouncingScrollPhysics(),
                controller: _messageTextController,
                maxLines: null,
                style: GoogleFonts.quicksand(
                  fontSize: !widget.isTablet ? 14 : 20,
                  fontWeight: FontWeight.w500,
...
                ),
              ),
            ),
          ),
          const SizedBox(width: 4),
          GestureDetector(
            key: Key('sendButton'),
            onTap: () {
              String msg = _messageTextController.text;
              _messageTextController.clear();
              _sendMessage(false, msg, Timestamp.now(), FirebaseFirestore.instance.doc("users/${widget.currentUser.uid}"));
              
            },
...
