...
                  borderRadius: BorderRadius.circular(10),
                ),
              ),
              enableFeedback: true,
              minimumSize: MaterialStateProperty.all(Size(100, 50)),
            ),
            child: const Text('SHARE')
          ),
        ],
      ),
    );
  }

...
